<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_simulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/simulator_status_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/btn_take_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/simulator_action_take_off"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_simulator"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_simulator"
        app:layout_constraintStart_toEndOf="@+id/directionJoystickLeft" />

    <ToggleButton
        android:id="@+id/btn_start_simulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/simulator_action_start"
        android:textOn="@string/simulator_action_stop"
        android:background="@color/accent_normal"
        app:layout_constraintBottom_toBottomOf="@+id/btn_land"
        app:layout_constraintEnd_toStartOf="@+id/btn_land"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_take_off" />

    <Button
        android:id="@+id/btn_land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/simulator_action_land"
        app:layout_constraintBottom_toBottomOf="@+id/directionJoystickRight"
        app:layout_constraintEnd_toStartOf="@+id/directionJoystickRight"
        app:layout_constraintStart_toEndOf="@+id/btn_start_simulator" />

    <com.leidossd.dronecontrollerapp.simulator.OnScreenJoystick
        android:id="@+id/directionJoystickLeft"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@mipmap/joystick_bg"
        app:layout_constraintBottom_toBottomOf="@+id/btn_take_off"
        app:layout_constraintEnd_toStartOf="@+id/btn_take_off"
        app:layout_constraintStart_toStartOf="parent" />

    <com.leidossd.dronecontrollerapp.simulator.OnScreenJoystick
        android:id="@+id/directionJoystickRight"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        android:background="@mipmap/joystick_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_land"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />



</android.support.constraint.ConstraintLayout>
