<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DroneInput">

    <EditText
        android:id="@+id/x_box"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_num"
        android:hint="@string/default_num"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/y_box"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_num"
        android:hint="@string/default_num"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/z_box"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_num"
        android:hint="@string/default_num"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="onClicked"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="onClicked"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="onClicked"
        android:text="@string/confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>